--- a/resources/styles/dark.qss
+++ b/resources/styles/dark.qss
@@ -27,6 +27,7 @@ QMenu {
     color: #DDDDDD;
     padding: 0;
     border: 1px solid #444;
+    min-width: 120px;
 }
 
 QMenu:selected, QMenu::item:selected {
@@ -36,7 +37,6 @@ QMenu:selected, QMenu::item:selected {
 
 QMenu::item {
     background: transparent;
-
 }
 
 QMenu::item:disabled {
@@ -353,7 +353,7 @@ StagedButton, UnstagedButton {
 QToolBar {
     border: none;
     border-bottom: 1px solid #444;
-    color: #aaa;
+    color: #999;
 }
 
 QToolButton {
