beginnings of a request response view using a basic code editor for now to show body also added a headers table tab

--- a/resources/traverse.qrc
+++ b/resources/traverse.qrc
@@ -21,5 +21,6 @@
         <file>images/light_up_arrow.png</file>
         <file>images/sizer_dark.png</file>
         <file>images/sizer_light.png</file>
+        <file>editor_styles/dracula.xml</file>
     </qresource>
 </RCC>
