--- a/resources/styles/dark.qss
+++ b/resources/styles/dark.qss
@@ -54,7 +54,7 @@ QStatusBar::item {
     border: none;
 }
 
-QTableView {
+QTableView, QTableWidget {
     color: #DDDDDD;
     background-color: #333333;
     alternate-background-color: #404040;
@@ -64,17 +64,17 @@ QTableView {
     border: 1px solid #444;
 }
 
-QTableView::item {
+QTableView::item, QTableWidget::item {
     border: 0;
     padding: 2px 0;
     background-color: #333333;
 }
 
-QTableView::item:alternate {
+QTableView::item:alternate, QTableWidget::item:alternate {
     background-color: #404040;
 }
 
-QTableView::item:selected {
+QTableView::item:selected, QTableWidget::item:selected {
     color: #eee;
     background: none;
     background-color: #222;
@@ -82,7 +82,7 @@ QTableView::item:selected {
     border-bottom: 1px solid #666;
 }
 
-QTableView::item:hover {
+QTableView::item:hover, QTableWidget::item:hover {
     color: #cccccc;
 }
 
@@ -121,6 +121,7 @@ QTabBar::close-button {
 QTextEdit, QTreeView {
     color:#ddd;
     background-color:#333333;
+    border: none;
 }
 
 QTreeView {
